--- a/style.css
+++ b/style.css
@@ -684,7 +684,7 @@ h5 {
     //border-radius: 15px;
     margin: 0 auto;
     box-shadow: 3px 3px 10px #a3a3a3;
-    padding: 50px 0;
+    padding: 50px 20px;
     display: flex;
     flex-direction: column;
     gap: 3rem;
