--- a/style.css
+++ b/style.css
@@ -125,6 +125,7 @@ h5 {
 .closeButton_line1 {
     height: 2px;
     background-color: white;
+    background-color: red;
     width: 30px;
     transform: rotate(45deg);
     position: absolute;
@@ -134,6 +135,7 @@ h5 {
 .closeButton_line2 {
     height: 2px;
     background-color: white;
+    background-color: red;
     width: 30px;
     transform: rotate(-45deg);
     position: absolute;
