--- a/style.css
+++ b/style.css
@@ -98,7 +98,6 @@ h5 {
     background-color: #02102F;
     z-index: 1001;
     overflow-x: hidden;
-    overflow: hidden;
 
     border: outline 4px white;
     transition: ease-out .2s;
@@ -219,6 +218,7 @@ h5 {
 }
 
 .closeButton {
+    position: absolute;
     top: 0;
     right: 0;
     display: flex;
@@ -234,6 +234,8 @@ h5 {
 .closeButton_line1 {
     height: 2px;
     background-color: white;
+
+    background-color: red;
     width: 30px;
     transform: rotate(45deg);
     position: absolute;
